[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Fonts/montserrat.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/GUI/ReturnToTitle.gd" type="Script" id=2]
[ext_resource path="res://src/GUI/DifficultySelect.gd" type="Script" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1800.0
margin_bottom = 1000.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 200

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1680.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 1 )
text = "Difficulties"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 260.0
margin_right = 1680.0
margin_bottom = 700.0
size_flags_vertical = 3
custom_constants/separation = 50
alignment = 1

[node name="Easy" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 526.0
margin_bottom = 440.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Easy"

[node name="Medium" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 576.0
margin_right = 1103.0
margin_bottom = 440.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Medium"

[node name="Hard" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 1153.0
margin_right = 1680.0
margin_bottom = 440.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Hard"

[node name="Back" type="Button" parent="VBoxContainer"]
margin_top = 900.0
margin_right = 42.0
margin_bottom = 920.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Back"
script = ExtResource( 2 )

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Easy" to="." method="_on_Easy_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Medium" to="." method="_on_Difficult_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Hard" to="." method="_on_Hardcore_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="VBoxContainer/Back" method="_on_Back_pressed"]
